# SCLab-CommunityEdition

./: CMakeLists.txt  LICENSE  README.md  version.h.in
deps_win64/SARibbon/cmake/: saribbon-config-version.cmake  saribbon-config.cmake
deps_win64/SARibbon/lib/: SARibbonBar.lib
deps_win64/npcap/: CMakeLists.txt
deps_win64/npcap/src/: main.cpp
resource/: ribbon_resource.qrc
resource/theme/: matlab.qss
src/: main.cpp
src/data_process/kernel_server/connect/: connect.cpp  connect.hpp
src/front_ui/center_widget/: widget_center.cpp  widget_center.h  widget_center.ui
src/front_ui/kernel_widget/: base_frontend_mixin.cpp  base_frontend_mixin.h  console_widget.cpp  console_widget.h  frontend_widget.cpp  frontend_widget.h  history_console_widget.cpp  history_console_widget.h  jupyter_widget.cpp  jupyter_widget.h  kernel_client.cpp  kernel_client.h  kernel_manager.cpp  kernel_manager.h
src/front_ui/main_window/: main_window.cpp  main_window.h
src/front_ui/small_widget_center/kernel_selection/: kernel_selection.cpp  kernel_selection.h  kernel_selection.ui
src/front_ui/small_widget_center/welcome_home/: welcome_home.cpp  welcome_home.h  welcome_home.ui
src/front_ui/small_widget_ribbon/about_sclab/: about_sclab.cpp  about_sclab.h  about_sclab.ui
src/front_ui/small_widget_ribbon/donation_or_sponsor/: donation_or_sponsor.cpp  donation_or_sponsor.h  donation_or_sponsor.ui
src/front_ui/small_widget_ribbon/licenses_agreement/: licenses_agreement.cpp  licenses_agreement.h  licenses_agreement.ui
src/front_ui/small_widget_ribbon/preferences/: preferences.cpp  preferences.h  preferences.ui
src/front_ui/small_widget_ribbon/say_thanks/: say_thanks.cpp  say_thanks.h  say_thanks.ui
src/front_ui/status_bar/: status_bar.cpp  status_bar.h  status_bar.ui
src/front_ui/terminal_simulation/: terminal_simulation.cpp  terminal_simulation.h  terminal_simulation.ui
src/global_manager/global_config/: version.h
test/: jupyter_client_test.py  static_analysis_with_cpp_check.py
